force-app/main/default/objects/PgM_Team__c/PgM_Team__c.object-meta.xml
<CustomObject>
    <label>Team</label>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>