force-app/main/default/objects/PgM_Team__c/fields/PgM_Frequency__c.field-meta.xml
<CustomField>
    <fullName>PgM_Frequency__c</fullName>
    <label>Frequency</label>
    <type>TextArea</type>
</CustomField>