force-app/main/default/objects/PgM_Team__c/recordTypes/Governance.recordType-meta.xml
<RecordType>
    <fullName>Governance</fullName>
    <active>true</active>
    <label>Governance</label>
</RecordType>