force-app/main/default/objects/PgM_Team__c/recordTypes/Operating.recordType-meta.xml
<RecordType>
    <fullName>Operating</fullName>
    <active>true</active>
    <label>Operating</label>
</RecordType>