force-app/main/default/objects/PgM_Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PgM_Description__c</columns>
    <columns>PgM_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>