force-app/main/default/objects/PgM_Team__c/listViews/Governance_Committees.listView-meta.xml
<ListView>
    <fullName>Governance_Committees</fullName>
    <columns>NAME</columns>
    <columns>PgM_Description__c</columns>
    <columns>PgM_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PgM_Team__c.Governance</value>
    </filters>
    <label>Governance Committees</label>
</ListView>