force-app/main/default/objects/PgM_Team__c/listViews/Operating_Teams.listView-meta.xml
<ListView>
    <fullName>Operating_Teams</fullName>
    <columns>NAME</columns>
    <columns>PgM_Description__c</columns>
    <columns>PgM_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PgM_Team__c.Operating</value>
    </filters>
    <label>Operating Teams</label>
</ListView>